--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             <div class="work">
                 <img src="work-0.webp">
                 <div class="layer">
-                    <h3>Machine Learning Model</h3>
-                    <p>Coming Soon</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Problem Solivng</h3>
+                    <p>Using UI/UX, to solve real world problems that humans face on a daily basis </p>
+                    <a href="https://cashzen.onrender.com/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
