--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div>
                 <i class="fa-brands fa-app-store"></i>
-                <h2>Web Devlopment</h2>
+                <h2>Web Devlopment(UI/UX)</h2>
                 <p>Web development involves designing, building, and maintaining websites and web applications using 
                     front-end and back-end technologies to ensure functionality, performance, and user experience.</p>
                     <a href="WD.html">Learn more</a>
