--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="social-icons">
                     <a href="linkedin.com/in/mbali-jempi"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="MBALIJEMPI_CV (2).pdf" download class="btn btn2">Download CV</a>
+                <a href="MBALIJEMPI_DS_CV (1).pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
