--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <p><i class="fa-regular fa-envelope"></i> mbalijempi89@gmail.com</p>
                 <p><i class="fa-solid fa-phone"></i>+27 76 294 9623</p>
                 <div class="social-icons">
-                    <a href="linkedin.com/in/mbali-jempi"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="linkedin.com/in/mbali-jempi"><i class="fa-brands fa-linkedin">Mbali Jempi</i></a>
                 </div>
                 <a href="MBALIJEMPI_DS_CV (1).pdf" download class="btn btn2">Download CV</a>
             </div>
