--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2024- Current</span><br>Technical Mentor at ALX</li>
+                            <li><span>2024- Current</span><br>Data Scientist at ALX</li>
                             <li><span>2023-2024</span><br>Data Science Tutor at ExploreAI</li>
                             <li><span>2022-2023</span><br>Tutor at Prep2Perfection</li>
                         </ul>
